zz-out/pass14_run2/zz-scripts/chapter09/plot_fig01_phase_overlay.err
  File "/home/jplal/MCGT/zz-scripts/chapter09/plot_fig01_phase_overlay.py", line 136
    if (
    ^^
SyntaxError: invalid syntax
